# IDEFY

./: CMakeLists.txt  main.cpp  main.py
core/: application.cpp  application.hpp  layermodel.cpp  layermodel.hpp  linenumbermodel.cpp  linenumbermodel.hpp  metatypes.hpp  qmlsingleton.hpp  recipe.hpp
idefy-qml/: Editor.qml  MyMenu.qml  MyMenuBar.qml
python/: application.py
qml/: App.qml  Constants.qml  Editor.qml  FileSystemView.qml  LayerExplorerView.qml  Main.qml  MainScreen.qml  Sidebar.qml  qmldir
util/: alertmanager.cpp  alertmanager.hpp  filematcher.cpp  filematcher.hpp  fileutil.cpp  fileutil.hpp  pathmatcher.cpp  pathmatcher.hpp
yocto/: configfile.hpp  layer.hpp  metadata.hpp  parser.cpp  parser.hpp  recipe.hpp  yoctoengine.cpp  yoctoengine.hpp
